syntax = "proto3";


package api;
option go_package = "github.com/mrd1920/common/api";

message ItemsWithQuantity{
    string ID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string customerID = 1;
    repeated ItemsWithQuantity Items = 2;
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;
}

message Order {
    string id = 1;
    string customer_id = 2;
    string status = 3;
    repeated Item Items = 4;
}

service OrderManagement {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
}